--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.6"
 kubernetes = "^10.0"
 
 [tool.poetry.dev-dependencies]
+pytest-cov = "^2.7"
 
 [build-system]
 requires = ["poetry>=0.12"]
