--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 [tool.poetry.dependencies]
 python = "^3.6"
 kubernetes = "^10.0"
+flask = "^1.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.7"
