--- a/examples/k8s/job-timeout.yaml
+++ b/examples/k8s/job-timeout.yaml
@@ -1,15 +1,15 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: fail
+  name: timeout
 spec:
   template:
     spec:
       containers:
-      - name: fail
+      - name: timeout
         image: ubuntu
         command: ["/bin/sh"]
-        args: ["exit", "1"]
+        args: ["sleep", "1000"]
       restartPolicy: Never
   backoffLimit: 0
-  activeDeadlineSeconds: 600
+  activeDeadlineSeconds: 10
