--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "k8s-async"
+name = "k8s-jobs"
 version = "0.1.0"
-description = "Async Task Execution + AWS Batch Replacement for Kubernetes"
+description = "Async Job Manager + AWS Batch Replacement for K8s"
 authors = ["Daniel Tahara <dktahara@gmail.com>"]
 license = "Apache-2.0"
 
@@ -9,6 +9,7 @@ license = "Apache-2.0"
 python = "^3.6"
 kubernetes = "^10.0"
 flask = "^1.1"
+jinja2 = "^2.10"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.7"
