--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "Apache-2.0"
 python = "^3.6"
 kubernetes = "^10.0"
 jinja2 = "^2.10"
+dataclasses = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.7"
