--- a/examples/k8s/deployment.yaml
+++ b/examples/k8s/deployment.yaml
@@ -22,13 +22,18 @@ spec:
           image: job-server
           imagePullPolicy: Always
           env:
+            # Required variables
             - name: JOB_DEFINITIONS_CONFIG_ROOT
               value: /etc/config/
+            - name: JOB_SIGNATURE
+              value: xyz0123456
+            - name: JOB_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
             # Manual override for job definition `pi`
             - name: JOB_DEFINITION_PATH_PI
               value: /etc/config2/pi-job-definition
-            - name: JOB_SIGNATURE
-              value: xyz0123456
           volumeMounts:
           - name: job-definitions-volume
             mountPath: /etc/config
