--- a/examples/k8s/job-template.yaml
+++ b/examples/k8s/job-template.yaml
@@ -1,14 +1,14 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ name }}
+  name: {{ templatevar }}
 spec:
   template:
     spec:
       containers:
-      - name: {{ name }}
+      - name: {{ templatevar }}
         image: ubuntu
-        command: ["echo", "{{ name }}"]
+        command: ["echo", "{{ templatevar }}"]
       restartPolicy: Never
   backoffLimit: 0
   activeDeadlineSeconds: 600
