--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,13 @@ dataclasses = "^0.6.0"
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.7"
 flask = "^1.1"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+gitpython = "^3.0"
+pytest-timeout = "^1.3"
 
 [tool.black]
 line-length = 88
 target-version = ['py36', 'py37']
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
