--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,15 @@ dist: xenial
 language: python
 python:
   - 3.6
-services:
-  - docker
+  - 3.7
 before_install:
   - pip install poetry
 install:
   - poetry install
+before_script:
+  - sudo snap install microk8s --classic
+  - sudo microk8s.status --wait-ready
+  - sudo microk8s.kubectl config view --raw > $HOME/microk8s.conf
 script:
-  - pytest
+  - pytest -m "not k8s_itest"
+  - TEST_K8S_CONFIG_PATH=$HOME/microk8s.conf pytest -m k8s_itest
