--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [tool.poetry]
 name = "k8s-jobs"
-version = "0.1.0"
+version = "0.1.1"
 description = "Async Job Manager + AWS Batch Replacement for K8s"
 authors = ["Daniel Tahara <dktahara@gmail.com>"]
+repository = "https://github.com/danieltahara/k8s-jobs"
+readme = "README.rst"
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
@@ -20,7 +22,7 @@ pytest-timeout = "^1.3"
 [tool.black]
 line-length = 88
 target-version = ['py36', 'py37']
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
