--- a/examples/k8s/deployment.yaml
+++ b/examples/k8s/deployment.yaml
@@ -38,13 +38,27 @@ spec:
           # with this mount/path
           - name: helloworld-volume
             mountPath: /etc/config2/
-  volumes:
-    - name: job-definitions-volume
-      configMap:
-        name: job-definitions
-    - name: helloworld-volume
-      configMap:
-        name: helloworld
-        items:
-          - key: helloworld
-            path: helloworld-job-definition
+      volumes:
+        - name: job-definitions-volume
+          configMap:
+            name: job-definitions
+        - name: helloworld-volume
+          configMap:
+            name: helloworld
+            items:
+              - key: helloworld
+                path: helloworld-job-definition
+
+# Ideally this would use an ingress + controller, but keep it simple for now:
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: job-server-nodeport
+spec:
+  selector:
+    app: job-server
+  ports:
+    - protocol: TCP
+      port: 5000
+  type: NodePort
