--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_install:
 install:
   - poetry install
 before_script:
-  - sudo snap install microk8s --classic
+  - sudo snap install microk8s --classic --channel=1.14/stable
   - sudo microk8s.status --wait-ready
   - sudo microk8s.kubectl config view --raw > $HOME/microk8s.conf
 script:
   - pytest -m "not k8s_itest"
-    #- TEST_K8S_CONFIG_PATH=$HOME/microk8s.conf pytest -m k8s_itest
+  - TEST_K8S_CONFIG_PATH=$HOME/microk8s.conf pytest -m k8s_itest
