--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ before_install:
   - pip install poetry
 install:
   - poetry install
-before_script:
-  - sudo snap install microk8s --classic --channel=1.15/stable
-  - sudo microk8s.status --wait-ready
-  - sudo microk8s.kubectl config view --raw > $HOME/microk8s.conf
+# before_script:
+#   - sudo snap install microk8s --classic --channel=1.14/stable
+#   - sudo microk8s.status --wait-ready
+#   - sudo microk8s.kubectl config view --raw > $HOME/microk8s.conf
 script:
   - pytest
-  - TEST_K8S_CONFIG_PATH=$HOME/microk8s.conf pytest -m k8s_itest
+  # - TEST_K8S_CONFIG_PATH=$HOME/microk8s.conf pytest -m k8s_itest
