--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 markers =
     k8s_itest: Slow itest that uses a real k8s, configured by TEST_K8s_CONFIG_PATH
-addopts = -m 'not k8s_itest'
+addopts = -m 'not k8s_itest' --cov k8s_jobs
