--- a/examples/k8s/configmap-helloworld.yaml
+++ b/examples/k8s/configmap-helloworld.yaml
@@ -14,9 +14,12 @@ data:
       template:
         spec:
           containers:
-          - name: hello
-            image: ubuntu
-            command: ["echo", "helloworld"]
+            - name: hello
+              image: ubuntu
+              command: ["echo", "hello"]
+            - name: world
+              image: ubuntu
+              command: ["echo", "world"]
           restartPolicy: Never
       backoffLimit: 0
       activeDeadlineSeconds: 600
