--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-cov = "^2.7"
 flask = "^1.1"
 gitpython = "^3.0"
 pytest-timeout = "^1.3"
+mypy = "^0.740.0"
 
 [tool.black]
 line-length = 88
