--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "k8s-jobs"
-version = "0.1.11"
+version = "0.1.12"
 description = "Async Job Manager + AWS Batch Replacement for K8s"
 authors = ["Daniel Tahara <dktahara@gmail.com>"]
 repository = "https://github.com/danieltahara/k8s-jobs"
@@ -18,6 +18,7 @@ pytest-cov = "^2.7"
 flask = "^1.1"
 gitpython = "^3.0"
 pytest-timeout = "^1.3"
+mypy = "^0.740.0"
 
 [tool.black]
 line-length = 88
