--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ mypy = "^0.740.0"
 
 [tool.black]
 line-length = 88
-target-version = ['py36', 'py37']
+target-version = ['py38']
 
 [build-system]
 requires = ["poetry>=0.12"]
