--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.rst"
 license = "Apache-2.0"
 
 [tool.poetry.dependencies]
-python = ">=3.6,<3.8"
+python = ">=3.6"
 kubernetes = "^10.0"
 jinja2 = "^2.10"
 dataclasses = "^0.6.0"
@@ -22,7 +22,7 @@ mypy = "^0.740.0"
 
 [tool.black]
 line-length = 88
-target-version = ['py36', 'py37']
+target-version = ['py38']
 
 [build-system]
 requires = ["poetry>=0.12"]
